# aoc2023

./: .gitignore  README.md  new_day.sh
day-00/: Cargo.toml
day-03/: Cargo.toml
day-05/: Cargo.toml
day-06/: main.py
day-07/: Cargo.toml
day-08/: Cargo.toml
day-09/: main.py
day-10/: bezier_point.gd  bezier_point.tscn  bezier_test.gd  bezier_test.tscn  icon.svg.import  map.gd  project.godot  world.gd  world.tscn
day-12/: Cargo.toml
day-13/: main.py
day-14/: main.py
day-15/: Cargo.toml
day-19/: Cargo.toml
