[package]
name = "day-19"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17.7"

# https://nnethercote.github.io/perf-book/build-configuration.html

[build]
rustflags = ["-C", "target-cpu=native"]

[profile.release]
codegen-units = 1
lto = "off"
panic = "abort"
strip = "debuginfo"
